plugins {
	id 'org.springframework.boot' version '2.7.6'
//	id 'org.springdoc.openapi-gradle-plugin' version "1.4.0"
	id 'io.spring.dependency-management' version '1.1.0'
	id 'java'
}

group = 'com.econovation.idp'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}
dependencies {
	//	jwt
	implementation 'io.jsonwebtoken:jjwt:0.9.1'

//	Redis Dependencies - Login, Logout 기능구현
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

//	Swagger
//	implementation 'org.springdoc:springdoc-openapi-security:1.6.11'
//	implementation 'org.springdoc:springdoc-openapi-common:1.6.9'
//	implementation 'org.springdoc:springdoc-openapi-webmvc-core:1.6.9'
	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.14'

//	Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-security'

//	Mail Service
	implementation 'org.springframework.boot:spring-boot-starter-mail'
//  spring data jpa
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// Spring actuator
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
	runtimeOnly 'mysql:mysql-connector-java'

	compileOnly 'org.projectlombok:lombok'
//	implementation 'mysql-connector-java:8.0.22'
	//	runtimeOnly 'com.h2database:h2:2.1.214'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

	jar { enabled = false }

}

tasks.named('test') {
	useJUnitPlatform()
}



